# meal-planner-v02

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/dependencies/: __init__.py  session.py
apps/api/app/models/: __init__.py  ai_planning.py  grocery.py  household.py  inventory.py  meal_plan.py  planner_event.py  reconciliation.py  session.py
apps/api/app/routers/: grocery.py  inventory.py  planner.py  session.py
apps/api/app/schemas/: __init__.py  ai_planning.py  enums.py  grocery.py  inventory.py  meal_plan.py  planner.py  reconciliation.py
apps/api/app/seeds/: __init__.py  __main__.py  reviewer.py
apps/api/app/services/: grocery_service.py  inventory_store.py  local_db_compat.py  planner_service.py
apps/api/migrations/: __init__.py
apps/api/migrations/versions/: __init__.py  rev_20260308_01_aiplan01_planner_seams.py  rev_20260308_02_aiplan04_fallback_modes.py  (+4 more)
apps/api/tests/: grocery_fixtures.py  test_aiplan01_migration.py  test_aiplan04_migration.py  test_aiplan05_migration.py  test_groc01_migration.py  test_groc08_groc09_migration.py  test_grocery.py  test_health.py  test_inventory.py  test_local_db_compat.py  test_planner.py  test_reviewer_seed.py  test_seeds.py  test_session.py  test_sync04_migration.py
apps/worker/: pyproject.toml
apps/worker/app/: main.py
apps/worker/tests/: conftest.py  planner_fixtures.py  test_generation_worker.py  test_worker_smoke.py
apps/worker/worker_runtime/: __init__.py  runtime.py
(+303 files in other folders)
