[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meal-planner-api"
version = "0.1.0"
description = "FastAPI backend for the meal planner"
requires-python = ">=3.13,<3.15"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "pytest-httpx>=0.30,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
