[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meal-planner-worker"
version = "0.1.0"
description = "Background worker for the meal planner"
requires-python = ">=3.13,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]
