[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meal-planner-worker"
version = "0.1.0"
description = "Background worker for the meal planner"
requires-python = ">=3.13,<3.15"
dependencies = [
  "pydantic>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.setuptools.packages.find]
include = ["app*", "worker_runtime*"]
